frontend/test/should_pass/emit_001.grg

rule r1 {
  x:Node;
  negative { x <-- ; }
  modify{
//    emit("0", r1 & r2(x) || (x, y) = r3 && (r1 ^ r2(a, b,c, y)), x.a, r2(x), x.b);
    emit("0", exec(r2(x)));
  }
}

rule r2(x:Node) {
  x --> y:Node;
  modify {
    delete(x);
    emit("-->O", exec(r2(y)));
  }
}
